# mock-s3

./: .gitignore  Cargo.toml  Dockerfile  Makefile  rustfmt.toml
src/: config.rs  error.rs  main.rs  response.rs
src/service/: file_discovery.rs  mod.rs
