[package]
name = "mock-s3-rs"
version = "0.1.0"
edition = "2024"
authors = ["Naim Aryudya <naimaryudya@gmail.com>"]

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "2.0.17"
